# java8-parser

./: .gitignore  LICENSE  README.md  stack-GHCJS.yaml  stack.yaml
client/: exemplator-client.cabal
client/app/: Main.hs
lib/: java-parser.cabal  java-usage-finder.cabal
lib/src/: Lib.hs  Type.hs  Usage.hs
lib/src/Java/Parser/: DeclarationChecker.hs  Internals.hs  Lib.hs  Type.hs  TypeChecker.hs  Typechecker.hs  Usage.hs  UsageFinder.hs  Usagefinder.hs
lib/src/Java/UsageFinder/: DFSTraversal.hs  Lib.hs  TraversalContext.hs  UsageFinder.hs
lib/src/Java/UsageFinder/Old/: DeclarationChecker.hs  Internals.hs  Lib.hs  TypeChecker.hs  UsageFinder.hs
