name:                exemplator-client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/LeanderK/exemplator-client#readme
license:             BSD3
license-file:        ../LICENSE
author:              Leander Kurscheidt
maintainer:          Leander.Kurscheidt@gmx.de
copyright:           Copyright: (c) 2016 Leander Kurscheidt
category:            Development
build-type:          Simple
extra-source-files:  ../README.md
cabal-version:       >=1.10

executable exemplator-client-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  
  build-depends:     base
                  , java-parser
                  , ghcjs-base

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/LeanderK/exemplator-client
