name:                java-usage-finder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/LeanderK/exemplator-client#readme
license:             BSD3
license-file:        ../LICENSE
author:              Leander Kurscheidt
maintainer:          Leander.Kurscheidt@gmx.de
copyright:           Copyright: (c) 2016 Leander Kurscheidt
category:            Development
build-type:          Simple
extra-source-files:  ../README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Java.UsageFinder.UsageFinder,
                       Java.UsageFinder.DFSTraversal,
                       Java.UsageFinder.Lib
                      
  build-depends:       base >= 4.7 && < 5,
                       language-java,
                       parsec >= 3.0

  default-language:    Haskell2010

test-suite java-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , java-parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/LeanderK/exemplator-client
